# django-user-messages

./: .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: conf.py
tests/: cov.sh  requirements.txt
tests/testapp/: settings.py  test_messages.py  urls.py
tests/testapp/templates/: base.html
user_messages/: __init__.py  admin.py  api.py  apps.py  context_processors.py  middleware.py  models.py
user_messages/locale/de/LC_MESSAGES/: django.mo  django.po
user_messages/migrations/: 0001_initial.py  0001_squashed_0003_alter_message_index_together_and_more.py  0002_alter_message_index_together.py  0002_message_meta.py  0003_alter_message_index_together_and_more.py  0003_auto_20170518_0928.py
