[metadata]
name = django_user_messages
version = attr: user_messages.__version__
description = Offline addon for django.contrib.messages
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/matthiask/django-user-messages/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = MIT-License
license_file = LICENSE
platforms = OS Independent
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.extras_require]
tests =
    coverage

[options.packages.find]
exclude =
    tests
    tests.*

[coverage:run]
branch = True
include =
    *user_messages*
omit =
    *migrations*
    *tests*
    *.tox*
